--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -3917,7 +3917,7 @@
     "selected_all": "تحديد الكل",
     "set_temp_error": "لا يمكن تحقيق درجة الحرارة المحددة. يرجى تعديل درجة حرارة المجرى المائي.",
     "no_device_support_eco_key": "لا يوجد جهاز متاح، يرجى التأكد من أن أجهزتك متصلة وتدعم وضع ECO.",
-    "appliance_disconnect_cannot_open_eco": "الجهاز غير متصل، يرجى التحقق مما إذا كانت شبكة الواي فاي والتحكم عن بعد مفعلة.",
+    "appliance_disconnect_cannot_open_eco": "تم فصل الجهاز، يرجى التحقق من تمكين Wi-Fi وجهاز التحكم عن بعد.",
     "power_on_remote_eabled_tips": "متاح فقط عند تشغيل الجهاز وتمكين بدء التشغيل عن بعد.",
     "power_on_tips": "متاح فقط عندما يكون الجهاز مشغل.",
     "asko_oven_on_during_on": "تشغيل أثناء الاستخدام",
@@ -4149,5 +4149,55 @@
     "CL_DV_HOB_refresh_mode": "وضع التحديث",
     "hob_induction3_new_tips": "تعرف على كيفية توصيل أدوات الطهي الذكية الخاصة بك وتصفح مجموعة واسعة من الوصفات خطوة بخطوة، والتي تم إعدادها خصيصًا للطهي بدقة درجة الحرارة.",
     "CL_DV_OV_added_successfully": "تمت الإضافة بنجاح!",
-    "add_routine": "أضف روتينًا"
+    "add_routine": "أضف روتينًا",
+    "CL_DV_PIND_update_blue_tooth": "تأكد من تشغيل البلوتوث لديك.",
+    "CL_DV_PIND_accessory_firmware_update": "تحديث البرامج الثابتة للملحقات",
+    "CL_CF_CS_ble_scan_not_list": "إذا لم يكن جهازك مدرجًا في القائمة، فيمكنك النقر فوق \"محاولة مرة أخرى\" للبحث مرة أخرى، أو النقر فوق \"التالي\" لتكوين الشبكة بطريقة أخرى.",
+    "CL_CF_CS_ble_scan_have_not_found": "لم نعثر على أي جهاز على البلوتوث. يمكنك النقر فوق \"حاول مرة أخرى\" للبحث مرة أخرى، أو النقر فوق \"التالي\" لتكوين الشبكة بطريقة أخرى.",
+    "CL_DV_WM_pump_cleaning": "مضخة التنظيف...",
+    "CL_DV_WM_autodoes_tip": "قم بتمكين هذه الميزة وسيقوم جهازك بتوزيع المنظفات ومنعم الأقمشة بذكاء أثناء غسل ملابسك.",
+    "CL_DV_WM_detergent_department_key": "حجرة المنظفات",
+    "CL_DV_WM_Dosage_Amount_key": "كمية الجرعة",
+    "CL_DV_WM_softener_department_key": "حجرة المنقي",
+    "CL_DV_WM_auto_does_with_detergent": "الجرعة التلقائية مع المنظفات",
+    "CL_DV_WM_same_detergent": "نفس المنظف",
+    "CL_DV_WM_normal_dosage_weight_tip": "الجرعة العادية: 4~5 كجم من وزن الملابس.",
+    "CL_DV_WM_pump_clean_note_1": "ملاحظات: إذا كنت تريد تغيير محتوى مكون التوزيع، يرجى تذكر ذلك ",
+    "CL_DV_WM_pump_clean_note_2": "قم بتنظيف المكون أولاً.",
+    "CL_DV_WM_Pump_clean_key": "تنظيف المضخة",
+    "CL_DV_WM_pump_clean_how_to_use": "كيفية الاستخدام؟",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. قم بتفريغ الحجرة وملئها بالماء قبل تفعيل وظيفة تنظيف المضخة.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. قم بتنشيط وظيفة تنظيف المضخة من جانب الماكينة.",
+    "CL_DV_WM_pump_clean_when_to_use": "متى تستخدم؟",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. إذا كنت ترغب في تغيير محتويات حجرة \"المنعم\"، يرجى التأكد من أنها فارغة وتشغيل وظيفة تنظيف المضخة قبل الاستخدام التالي. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. إذا لم تقم بتنظيف المضخة لأكثر من نصف عام، فيمكنك تنشيط وظيفة تنظيف المضخة.",
+    "CL_DV_WM_standard_auto_does_key": "الجرعة التلقائية القياسية",
+    "CL_DV_WM_compartment_in_use_key": "حجرة الاستخدام",
+    "CL_CF_CS_oven_g_800_cs_1": "ضبط الجهاز إلى ظروف التشغيل العادية.\n اضغط على أيقونة القائمة.",
+    "CL_CF_CS_oven_g_800_cs_2": "اضغط مع الاستمرار على أيقونة Wi-Fi لمدة 3-6 ثوانٍ تقريبًا حتى تصل إلى الحرف \"C\" على الجدول الزمني.",
+    "CL_CF_CS_oven_g_800_cs_3": "شبكة الجهاز مفتوحة الآن للاتصال لمدة 5 دقائق.\n انقر فوق التالي للمتابعة.",
+    "CL_CF_CS_oven_g_800_p_1": "ضبط الجهاز إلى ظروف التشغيل العادية.\n اضغط على أيقونة القائمة.",
+    "CL_CF_CS_oven_g_800_p_2": "اضغط مع الاستمرار على أيقونة Wi-Fi لمدة 6-9 ثوانٍ تقريبًا حتى تصل إلى الحرف \"P\" على الجدول الزمني.",
+    "CL_CF_CS_oven_g_800_p_3": "الآن أصبح الجهاز جاهزًا للإقران لمدة 3 دقائق.\n انقر فوق التالي للمتابعة.",
+    "CL_DV_PIND_update_fail_tip1": "حدث خطأ غير متوقع. لم ينجح تحديث البرنامج الثابت.",
+    "CL_DV_PIND_update_fail_tip4": "يرجى المحاولة مرة أخرى لتحديث الملحق الخاص بك.",
+    "CL_DV_PIND_update_fail_tip2": "احتفظ بأجهزتك بالقرب منك أثناء التحديث.",
+    "CL_DV_PIND_update_fail_tip3": "تحقق من اتصال البلوتوث الخاص بك.",
+    "room_good_content": "تكييف الهواء في هذه الغرفة جيد ولا يحتاج إلى تحسين في الوقت الحالي.",
+    "edit_address_title": "تعديل العنوان",
+    "edit_profile_title": "تعديل ملف تعريف المستخدم",
+    "CL_DV_OV_reduce_moisture": "تقليل الرطوبة",
+    "air_care_level_tips": "معيار تقييم درجة الحرارة: جيد: 17 < T < 27℃ طبيعي: 10≤T≤17℃، 27≤T≤30℃ غير جيد: T＜10℃ T＞30℃ معيار تقييم الرطوبة: جيد: H < 70% طبيعي: 30≤H≤40%، 70≤H≤80% غير جيد: H＜30%، H＞80%",
+    "addresses_key": "العناوين",
+    "default_address_user": "العنوان الافتراضي",
+    "set_default_address_user": "تعيين كعنوان افتراضي",
+    "CL_DV_OV_reduce_moisture_desc": "اضبط وقت تقليل الرطوبة. يمكنك إضافة ما يصل إلى 3 دورات لتقليل الرطوبة.",
+    "CL_CF_RM_swap_to_exchange_tip": "الرجاء الضغط على زر التبديل لتغيير نوع الغرفة",
+    "set_wine_light_mode": "قم بتعيين تفضيلاتك لكل من الأوضاع أدناه.",
+    "wine_lights_use": "اختر كيفية تصرف الأضواء أثناء الأحداث المختلفة.",
+    "light_switch_content_msg": "يتيح لك مفتاح الإضاءة تشغيل أو إيقاف تشغيل الأضواء الموجودة على الجهاز بسرعة. يحل المفتاح محل أوضاع الإضاءة الأخرى.",
+    "lights_on_for_msg": "قم بضبط المدة التي تظل فيها أضواء مفتاح الإضاءة نشطة. بعد انتهاء الفترة الزمنية المحددة على \"إضاءة لمدة\"، يعود الجهاز إلى سلوك أوضاع الإضاءة السابقة.",
+    "ambient_mode_msg": "يمتزج الوضع المحيط مع أجواء غرفة المعيشة. سيتم تنشيطه عند إغلاق الباب.",
+    "three_standby": "بعد تحديد عدد الدقائق التي لا يتم فيها اتخاذ أي إجراء بعد \"شاشة الساعة\"، سيتم تحويل شاشة الخزانة إلى وضع الاستعداد.",
+    "delete_account_tips": "سوف تتلقى رسالة بريد إلكتروني عند حذف جميع بياناتك من نظامنا."
 }
