--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -1676,7 +1676,7 @@
     "add_timing": "ADD TIMING",
     "set_start_to_finish_time": "Set start to finish time",
     "pair_pump_appliance": "Heat-pump water heater",
-    "heat_pump": "Heat pump",
+    "heat_pump": "Inverter DHW",
     "pump_boost_1": "Boost 1",
     "pump_electric_heating": "Electric heating",
     "pump_holiday_mode": "Holiday",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "1. It's plugged in and powers on.\n2. Your Wi-Fi is active and connected.\n3. Wi-Fi password hasn't changed recently.",
     "dont_remind_again_uppercase": "DON'T REMIND AGAIN",
     "storage_tips_title": "Storage tips :",
-    "heat_pump_oem": "PRO series DHW",
+    "heat_pump_oem": "Fixed-speed DHW",
     "td22_drying_empty_water_tank": "Drying – Empty water tank",
     "td22_drying_paused": "Drying paused",
     "td22_drying_finished": "Drying finished",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Are you sure you want to logout?",
     "fridge_child_lock_open_tips": "After the child lock is opened, the touch screen and dispenser will be locked.",
     "want_scan_code_tips": "I want to scan code.",
-    "tri_name_key": "ATW heatpump heater",
+    "tri_name_key": "ATW Pro Heat Pump",
     "water_set_key": "WATER TEMP",
     "f_e_fan_fault_tip": "DC fan failure",
     "zone_water_key": "Zone1 Water",
@@ -2538,7 +2538,7 @@
     "device_all_notification_tips": "You will receive all device-related updates, notifications that require your attention, marketing alerts, and any other relevant notifications within ConnectLife.",
     "device_urgent_nmotification_tips": "You will receive only those notifications that require immediate attention. This setting ensures you are instantly informed of critical updates and time-sensitive matters.",
     "device_none_notification_tips": "You won't receive any notifications, including all device-related updates as well as urgent notifications that require immediate attention.",
-    "ac_duct_type": "Duct type air conditioner",
+    "ac_duct_type": "Duct Air Conditioner",
     "duct_silent": "Silent",
     "timer_name_not_less_2_length": "timer name not less 2 length",
     "push_notifications_settings_tips": "Receive notifications and alerts as push notifications on your phone, even when you are not actively using the ConnectLife app.",
@@ -2865,9 +2865,9 @@
     "all_offline": "Devices are offline",
     "optimizing_tips": "Please stop optimizing first",
     "label_list_title": "Choose a plan to optimize your air condition",
-    "how_use_air_care": "How to use air care",
-    "how_manager_room": "How to manage your room",
-    "how_select_mode": "How to select a preset mode",
+    "how_use_air_care": "How to Use Air Care",
+    "how_manager_room": "How to Manage Your Room",
+    "how_select_mode": "How to Select a Preset Mode",
     "user_content_1": "Introduce a new scenario feature for air products, enabling users to monitor weather conditions, optimize room air quality, create 3D room views, and receive automation suggestions. Additionally, you can access usage tips for air products and air care scenarios.",
     "user_content_2": "Upon adding an air treatment product, a dedicated \"air care\" entry will be conveniently displayed on both the app homepage and device homepage for users to easily access.",
     "manage_content_1": "Upon adding a new air treatment device, easily generate suitable rooms.",
@@ -3917,7 +3917,7 @@
     "selected_all": "selected all",
     "set_temp_error": "The set temperature cannot be achieved. Please modify the waterway temperature.",
     "no_device_support_eco_key": "No device is available, please make sure your devices are connected and support ECO mode",
-    "appliance_disconnect_cannot_open_eco": "The device is disconnected, please check if Wi-Fi and Remote Cotrol are enable.",
+    "appliance_disconnect_cannot_open_eco": "The device is disconnected, please check if Wi-Fi and Remote Control are enabled.",
     "power_on_remote_eabled_tips": "Only available when the device is powered on and remote start is enabled.",
     "power_on_tips": "Only available when the device is powered on.",
     "asko_oven_on_during_on": "ON during use",
@@ -4149,5 +4149,55 @@
     "CL_DV_HOB_refresh_mode": "Refresh mode",
     "hob_induction3_new_tips": "Learn how to connect your smart cookware and browse through a wide range of step-by-step recipes, specifically made for temperature precise cooking.",
     "CL_DV_OV_added_successfully": "Added successfully!",
-    "add_routine": "ADD ROUTINE"
+    "add_routine": "ADD ROUTINE",
+    "CL_DV_PIND_update_blue_tooth": "Make sure your bluetooth is turned on.",
+    "CL_DV_PIND_accessory_firmware_update": "Accessory firmware update",
+    "CL_CF_CS_ble_scan_not_list": "If your device is not listed, you can click ‘TRY AGAIN’ to search again, or click ‘NEXT’ to configure network in another way.",
+    "CL_CF_CS_ble_scan_have_not_found": "We haven’t found any device on bluetooth.You can click ‘TRY AGAIN’ to search again,or click ‘NEXT’ to configure network in another way.",
+    "CL_DV_WM_pump_cleaning": "Cleaning pump...",
+    "CL_DV_WM_autodoes_tip": "Enable this feature and your device will smartly dispense detergent and fabric softener while you do your laundry.",
+    "CL_DV_WM_detergent_department_key": "DETERGENT COMPARTMENT",
+    "CL_DV_WM_Dosage_Amount_key": "Dosage Amount",
+    "CL_DV_WM_softener_department_key": "SOFTENER COMPARTMENT",
+    "CL_DV_WM_auto_does_with_detergent": "Autodose With Detergent",
+    "CL_DV_WM_same_detergent": "Same Detergent",
+    "CL_DV_WM_normal_dosage_weight_tip": "Normal dosage: 4~5kg clothing weight.",
+    "CL_DV_WM_pump_clean_note_1": "Notes:If you want to change the content of the dispensing component, please remember to ",
+    "CL_DV_WM_pump_clean_note_2": "clean the component first.",
+    "CL_DV_WM_Pump_clean_key": "Pump clean",
+    "CL_DV_WM_pump_clean_how_to_use": "How to use?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1.Empty and fill the compartment with water before activating the pump clean function.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2.Active the pump clean function from the machine side.",
+    "CL_DV_WM_pump_clean_when_to_use": "When to use?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1.If you wish to change the contents in the “Softener”compartment, please ensure it is empty and runthe pump clean function before next use. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2.More than half year you havent clean the Pump, you can  active the pump clean function.",
+    "CL_DV_WM_standard_auto_does_key": "STANDARD AUTODOSE",
+    "CL_DV_WM_compartment_in_use_key": "COMPARTMENT IN USE",
+    "CL_CF_CS_oven_g_800_cs_1": "Set the device to normal operating conditions.\nTap the menu icon.",
+    "CL_CF_CS_oven_g_800_cs_2": "Tap and hold the Wi-Fi icon for approximately 3-6 seconds until it reaches the \"C\" on the timeline.",
+    "CL_CF_CS_oven_g_800_cs_3": "The device network is now open for connection for 5 minutes. \nClick NEXT to continue.",
+    "CL_CF_CS_oven_g_800_p_1": "Set the device to normal operating conditions.\nTap the menu icon.",
+    "CL_CF_CS_oven_g_800_p_2": "Tap and hold the Wi-Fi icon for approximately 6-9 seconds until it reaches the \"P\" on the timeline.",
+    "CL_CF_CS_oven_g_800_p_3": "The device is now ready for pairing for 3 minutes. \nClick NEXT to continue.",
+    "CL_DV_PIND_update_fail_tip1": "An unexpected error occurred. The firmware update was unsuccesful.",
+    "CL_DV_PIND_update_fail_tip4": "Please try again to update your accessory.",
+    "CL_DV_PIND_update_fail_tip2": "Keep your devices near while updating.",
+    "CL_DV_PIND_update_fail_tip3": "Check your bluetooth connection.",
+    "room_good_content": "This room's air condition is good. Optimization is not needed for now.",
+    "edit_address_title": "EDIT ADDRESS",
+    "edit_profile_title": "EDIT USER PROFILE",
+    "CL_DV_OV_reduce_moisture": "Reduce moisture",
+    "air_care_level_tips": "Temperature evaluation standard:\u2028Good: 17<T<27℃\u2028Normal: 10≤T≤17℃, 27≤T≤30℃\u2028Not good: T＜10℃ T＞30℃\u2028\u2028Humidity evaluation standard:\u2028Good: H<70%\u2028Normal: 30≤H≤40%, 70≤H≤80%\u2028Not good: H＜30%, H＞80%",
+    "addresses_key": "addresses",
+    "default_address_user": "DEFAULT ADDRESSS",
+    "set_default_address_user": "Set as default address",
+    "CL_DV_OV_reduce_moisture_desc": "Set when moisture should be reduced. You can add up to 3 moisture reduction cycles.",
+    "CL_CF_RM_swap_to_exchange_tip": "Please click the swap button to change room type",
+    "set_wine_light_mode": "Set your preferences for each of the modes below.",
+    "wine_lights_use": "Choose how the lights should behave in during the different events.",
+    "light_switch_content_msg": "Light Switch allows you to quickly turn ON of OFF the lights on the appliance. Switch overwrites the other light modes.",
+    "lights_on_for_msg": "Set how long the lights of the light switch remain activated for. After the time period set on ‘Lights On For’ is over, the appliance goes back to the previous light modes behaviour.",
+    "ambient_mode_msg": "Ambient mode blends into the living space ambience. It will be activated when the door is closed.",
+    "three_standby": "Set after how many minutes of no action after ‘Clock screen’, the display of the cabinet will go to the standby.",
+    "delete_account_tips": "You will receive an e-mail when all your data is deleted from our system."
 }
