--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -3917,7 +3917,7 @@
     "selected_all": "изабрано све",
     "set_temp_error": "Постављена температура не може да се постигне. Молимо вас да измените температуру воде.",
     "no_device_support_eco_key": "Нема доступних уређаја. Проверите да ли су ваши уређаји повезани и подржавају ECO режим.",
-    "appliance_disconnect_cannot_open_eco": "Уређај је искључен, проверите да ли су Wi-Fi и даљинско управљање омогућени.",
+    "appliance_disconnect_cannot_open_eco": "Уређај је искључен, проверите да ли су Ви-Фи и даљински управљач омогућени.",
     "power_on_remote_eabled_tips": "Доступно само када је уређај укључен и омогућено даљинско покретање.",
     "power_on_tips": "Доступно само када је уређај укључен.",
     "asko_oven_on_during_on": "УКЉУЧЕНО током употребе",
@@ -4149,5 +4149,55 @@
     "CL_DV_HOB_refresh_mode": "Режим освежавања",
     "hob_induction3_new_tips": "Научите како да повежете своје паметно посуђе и прегледајте широк спектар рецепата корак по корак, посебно направљених за кување са прецизношћу температуре.",
     "CL_DV_OV_added_successfully": "Успешно додато!",
-    "add_routine": "ДОДАЈ РУТИНУ"
+    "add_routine": "ДОДАЈ РУТИНУ",
+    "CL_DV_PIND_update_blue_tooth": "Уверите се да је ваш блуетоотх укључен.",
+    "CL_DV_PIND_accessory_firmware_update": "Ажурирање фирмвера додатне опреме",
+    "CL_CF_CS_ble_scan_not_list": "Ако ваш уређај није на листи, можете кликнути на „ПОКУШАЈ ПОНОВНО“ да бисте поново претражили или кликните на „ДАЉЕ“ да бисте конфигурисали мрежу на други начин.",
+    "CL_CF_CS_ble_scan_have_not_found": "Нисмо пронашли ниједан уређај на блуетоотх-у. Можете да кликнете на 'ПОКУШАЈ ПОНОВНО' да претражите поново или да кликнете на 'ДАЉЕ' да конфигуришете мрежу на други начин.",
+    "CL_DV_WM_pump_cleaning": "Пумпа за чишћење...",
+    "CL_DV_WM_autodoes_tip": "Омогућите ову функцију и ваш уређај ће паметно дозирати детерџент и омекшивач док перете веш.",
+    "CL_DV_WM_detergent_department_key": "ОДЈЕЉАК ЗА ДЕТЕРЏЕНТ",
+    "CL_DV_WM_Dosage_Amount_key": "Досаге Амоунт",
+    "CL_DV_WM_softener_department_key": "ОДЕЉАК ЗА ОМЕКШИВАЧ",
+    "CL_DV_WM_auto_does_with_detergent": "Аутоматско дозирање са детерџентом",
+    "CL_DV_WM_same_detergent": "Исти детерџент",
+    "CL_DV_WM_normal_dosage_weight_tip": "Нормална доза: 4-5 кг тежине одеће.",
+    "CL_DV_WM_pump_clean_note_1": "Напомене: Ако желите да промените садржај компоненте за дозирање, запамтите то ",
+    "CL_DV_WM_pump_clean_note_2": "прво очистите компоненту.",
+    "CL_DV_WM_Pump_clean_key": "Пумпа чиста",
+    "CL_DV_WM_pump_clean_how_to_use": "Како користити?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Испразните и напуните одељак водом пре него што активирате функцију чишћења пумпе.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Активирајте функцију чишћења пумпе са стране машине.",
+    "CL_DV_WM_pump_clean_when_to_use": "Када користити?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Ако желите да промените садржај у одељку за омекшивач, проверите да ли је празан и покрените функцију чишћења пумпе пре следеће употребе. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Више од пола године нисте чистили пумпу, можете активирати функцију чишћења пумпе.",
+    "CL_DV_WM_standard_auto_does_key": "СТАНДАРД АУТОДОСЕ",
+    "CL_DV_WM_compartment_in_use_key": "ОДЕЉАК У УПОТРЕБИ",
+    "CL_CF_CS_oven_g_800_cs_1": "Подесите уређај на нормалне услове рада.\n Додирните икону менија.",
+    "CL_CF_CS_oven_g_800_cs_2": "Додирните и држите Ви-Фи икону отприлике 3-6 секунди док не дође до „Ц“ на временској линији.",
+    "CL_CF_CS_oven_g_800_cs_3": "Мрежа уређаја је сада отворена за повезивање 5 минута.\n Кликните на СЛЕДЕЋЕ да наставите.",
+    "CL_CF_CS_oven_g_800_p_1": "Подесите уређај на нормалне услове рада.\n Додирните икону менија.",
+    "CL_CF_CS_oven_g_800_p_2": "Додирните и држите Ви-Фи икону отприлике 6-9 секунди док не дође до „П“ на временској линији.",
+    "CL_CF_CS_oven_g_800_p_3": "Уређај је сада спреман за упаривање 3 минута.\n Кликните на СЛЕДЕЋЕ да наставите.",
+    "CL_DV_PIND_update_fail_tip1": "Дошло је до неочекиване грешке. Ажурирање фирмвера није успело.",
+    "CL_DV_PIND_update_fail_tip4": "Покушајте поново да ажурирате свој додатак.",
+    "CL_DV_PIND_update_fail_tip2": "Држите своје уређаје близу док се ажурирате.",
+    "CL_DV_PIND_update_fail_tip3": "Проверите своју блуетоотх везу.",
+    "room_good_content": "Клима у овој соби је добра. Оптимизација за сада није потребна.",
+    "edit_address_title": "ЕДИТ АДДРЕСС",
+    "edit_profile_title": "УРЕДИ КОРИСНИЧКИ ПРОФИЛ",
+    "CL_DV_OV_reduce_moisture": "Смањите влагу",
+    "air_care_level_tips": "Стандард за процену температуре: Добро: 17 < Т < 27℃ Нормално: 10≤Т≤17℃, 27≤Т≤30℃ Није добро: Т＜10℃ Т＞30℃ Стандард за процену влажности: Добро: Х < 70% Нормално: 30≤Х≤40%, 70≤Х≤80% Није добро: Х＜30%, Х＞80%",
+    "addresses_key": "адресе",
+    "default_address_user": "ДЕФАУЛТ АДРЕСС",
+    "set_default_address_user": "Постави као подразумевану адресу",
+    "CL_DV_OV_reduce_moisture_desc": "Подесите када треба смањити влагу. Можете додати до 3 циклуса смањења влаге.",
+    "CL_CF_RM_swap_to_exchange_tip": "Кликните на дугме за замену да промените тип собе",
+    "set_wine_light_mode": "Подесите своја подешавања за сваки од режима у наставку.",
+    "wine_lights_use": "Одаберите како ће се светла понашати током различитих догађаја.",
+    "light_switch_content_msg": "Прекидач за светло вам омогућава да брзо укључите или искључите светла на уређају. Прекидач замењује друге режиме осветљења.",
+    "lights_on_for_msg": "Подесите колико дуго ће светла прекидача светла остати активирана. Након истека временског периода подешеног на 'Лигхтс Он Фор', уређај се враћа на претходно понашање у режимима осветљења.",
+    "ambient_mode_msg": "Амбијентални режим се уклапа у амбијент животног простора. Активираће се када се врата затворе.",
+    "three_standby": "Подесите након колико минута без радње након 'Екран сата', екран кабинета ће прећи у стање приправности.",
+    "delete_account_tips": "Добићете е-пошту када сви ваши подаци буду избрисани из нашег система."
 }
