--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -3917,7 +3917,7 @@
     "selected_all": "모두 선택됨",
     "set_temp_error": "설정 온도에 도달할 수 없습니다. 수로 온도를 수정하십시오.",
     "no_device_support_eco_key": "사용 가능한 장치가 없습니다. 장치가 연결되어 있고 ECO 모드를 지원하는지 확인하십시오.",
-    "appliance_disconnect_cannot_open_eco": "장치가 연결이 끊어졌습니다. WIFI와 리모컨이 활성화되어 있는지 확인하십시오.",
+    "appliance_disconnect_cannot_open_eco": "장치 연결이 끊어졌습니다. Wi-Fi 및 원격 제어가 활성화되어 있는지 확인하세요.",
     "power_on_remote_eabled_tips": "장치의 전원이 켜져 있고 원격 시작이 활성화된 경우에만 사용할 수 있습니다.",
     "power_on_tips": "기기의 전원이 켜져 있을 때만 사용할 수 있습니다.",
     "asko_oven_on_during_on": "사용 중 ON",
@@ -4149,5 +4149,55 @@
     "CL_DV_HOB_refresh_mode": "새로 고침 모드",
     "hob_induction3_new_tips": "스마트 조리기구를 연결하는 방법을 알아보고, 정확한 온도로 조리하기 위해 특별히 만들어진 다양한 단계별 요리법을 살펴보세요.",
     "CL_DV_OV_added_successfully": "성공적으로 추가되었습니다!",
-    "add_routine": "루틴 추가"
+    "add_routine": "루틴 추가",
+    "CL_DV_PIND_update_blue_tooth": "블루투스가 켜져 있는지 확인하세요.",
+    "CL_DV_PIND_accessory_firmware_update": "액세서리 펌웨어 업데이트",
+    "CL_CF_CS_ble_scan_not_list": "귀하의 기기가 목록에 없으면 '다시 시도'를 클릭하여 다시 검색하거나 '다음'을 클릭하여 다른 방식으로 네트워크를 구성할 수 있습니다.",
+    "CL_CF_CS_ble_scan_have_not_found": "블루투스에서 어떤 장치도 발견되지 않았습니다. '다시 시도'를 클릭하여 다시 검색하거나, '다음'을 클릭하여 다른 방식으로 네트워크를 구성하세요.",
+    "CL_DV_WM_pump_cleaning": "펌프 세척...",
+    "CL_DV_WM_autodoes_tip": "이 기능을 활성화하면 세탁하는 동안 기기에서 세제와 섬유유연제가 스마트하게 분사됩니다.",
+    "CL_DV_WM_detergent_department_key": "세제 칸",
+    "CL_DV_WM_Dosage_Amount_key": "투여량",
+    "CL_DV_WM_softener_department_key": "연화제 칸",
+    "CL_DV_WM_auto_does_with_detergent": "세제를 넣은 자동투약",
+    "CL_DV_WM_same_detergent": "같은 세제",
+    "CL_DV_WM_normal_dosage_weight_tip": "일반적인 복용량: 옷 무게 4~5kg.",
+    "CL_DV_WM_pump_clean_note_1": "참고사항:분사성분의 내용을 변경하고자 하는 경우 다음 사항을 기억하십시오. ",
+    "CL_DV_WM_pump_clean_note_2": "먼저 구성 요소를 청소하세요.",
+    "CL_DV_WM_Pump_clean_key": "펌프 청소",
+    "CL_DV_WM_pump_clean_how_to_use": "어떻게 사용하나요?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. 펌프 세척 기능을 활성화하기 전에 칸막이를 비우고 물로 채우세요.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. 기계 쪽에서 펌프 세척 기능을 활성화합니다.",
+    "CL_DV_WM_pump_clean_when_to_use": "언제 사용하나요?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. \"Softener\" 칸의 내용물을 변경하려면 칸이 비어 있는지 확인하고 다음 사용 전에 펌프 세척 기능을 실행하세요. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. 반년 이상 펌프를 청소하지 않은 경우 펌프 청소 기능을 활성화할 수 있습니다.",
+    "CL_DV_WM_standard_auto_does_key": "표준 자동 투여",
+    "CL_DV_WM_compartment_in_use_key": "사용 중인 구획",
+    "CL_CF_CS_oven_g_800_cs_1": "장치를 정상 작동 조건으로 설정합니다.\n 메뉴 아이콘을 탭하세요.",
+    "CL_CF_CS_oven_g_800_cs_2": "Wi-Fi 아이콘을 약 3~6초간 탭하여 타임라인의 \"C\"에 도달할 때까지 길게 누릅니다.",
+    "CL_CF_CS_oven_g_800_cs_3": "이제 장치 네트워크가 5분 동안 연결을 위해 열려 있습니다.\n 계속하려면 다음을 클릭하세요.",
+    "CL_CF_CS_oven_g_800_p_1": "장치를 정상 작동 조건으로 설정합니다.\n 메뉴 아이콘을 탭하세요.",
+    "CL_CF_CS_oven_g_800_p_2": "Wi-Fi 아이콘을 약 6~9초간 탭하여 타임라인의 \"P\"에 도달할 때까지 길게 누릅니다.",
+    "CL_CF_CS_oven_g_800_p_3": "이제 3분 동안 페어링을 할 준비가 되었습니다.\n 계속하려면 다음을 클릭하세요.",
+    "CL_DV_PIND_update_fail_tip1": "예상치 못한 오류가 발생했습니다. 펌웨어 업데이트가 실패했습니다.",
+    "CL_DV_PIND_update_fail_tip4": "액세서리를 다시 업데이트해 보세요.",
+    "CL_DV_PIND_update_fail_tip2": "업데이트하는 동안 기기를 가까이 두세요.",
+    "CL_DV_PIND_update_fail_tip3": "블루투스 연결을 확인하세요.",
+    "room_good_content": "이 방의 에어컨 상태는 좋습니다. 지금은 최적화가 필요 없습니다.",
+    "edit_address_title": "주소 수정",
+    "edit_profile_title": "사용자 프로필 편집",
+    "CL_DV_OV_reduce_moisture": "습기를 줄이세요",
+    "air_care_level_tips": "온도평가기준 : 양호 : 17 < T < 27℃ 정상 : 10≤T≤17℃, 27≤T≤30℃ 불량 : T＜10℃ T≥30℃ 습도평가기준 : 양호 : H < 70% 정상 : 30≤H≤40%, 70≤H≤80% 불량 : H＜30%, H≥80%",
+    "addresses_key": "구애",
+    "default_address_user": "기본 주소",
+    "set_default_address_user": "기본 주소로 설정",
+    "CL_DV_OV_reduce_moisture_desc": "수분을 줄여야 할 시기를 설정합니다. 최대 3개의 수분 감소 주기를 추가할 수 있습니다.",
+    "CL_CF_RM_swap_to_exchange_tip": "객실 유형을 변경하려면 교환 버튼을 클릭해 주세요.",
+    "set_wine_light_mode": "아래 각 모드에 대한 기본 설정을 지정하세요.",
+    "wine_lights_use": "다양한 이벤트에서 조명이 어떻게 작동할지 선택하세요.",
+    "light_switch_content_msg": "Light Switch를 사용하면 기기의 조명을 빠르게 켜거나 끌 수 있습니다. Switch는 다른 조명 모드를 덮어씁니다.",
+    "lights_on_for_msg": "조명 스위치의 조명이 활성화된 상태를 유지하는 시간을 설정합니다. '조명 켜기 시간'에 설정된 기간이 끝나면 기기는 이전 조명 모드 동작으로 돌아갑니다.",
+    "ambient_mode_msg": "앰비언트 모드는 거주 공간 분위기에 녹아듭니다. 문이 닫히면 활성화됩니다.",
+    "three_standby": "'시계 화면'이 켜진 후 몇 분 동안 아무런 동작이 없으면 캐비닛 디스플레이가 대기 모드로 전환될지 설정합니다.",
+    "delete_account_tips": "모든 데이터가 시스템에서 삭제되면 이메일을 받게 됩니다."
 }
